# pam-ssh-agent

./: .gitignore  Cargo.toml  LICENSE-MIT  Makefile  README.md  create-deb-dsc.sh  pam_ssh_agent.spec  pixi.toml
.copr/: Makefile
.github/workflows/: rust.yml
debian/: .gitignore  changelog  control  copyright  pam-ssh-agent.install  rules
debian/source/: options
examples/: authenticator.rs  testdata.rs
src/: agent.rs  args.rs  auth.rs  cmd.rs  environment.rs  expansions.rs  filter.rs  keys.rs  lib.rs  log.rs  logging.rs  nativecrypto.rs  pam.rs  pamext.rs  syslog.rs  test.rs  verify.rs  wrap_memcpy.c
tests/: certificates.rs  roundtrip.rs  sk_not_present.rs
tests/data/: README.md  authorized_keys  authorized_keys_with_sk  ca_key  ca_key.pub  cert.pub  cert_key  cert_key-cert.pub  cert_key.pub  cert_unknown_critical.pub  id_ed25519  id_ed25519-cert.pub  id_ed25519.pub  test.sh  test_ed25519_sk.pub  user_ca_key  user_ca_key.pub
