[package]
name = "pam-ssh-agent"
version = "0.5.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nresare/pam-ssh-agent"
authors = ["Noa Resare"]
description = """
A PAM module that authenticates using the ssh-agent.
"""

[lib]
name = "pam_ssh_agent"
crate-type = ["lib", "cdylib"]

[dependencies]
ssh-agent-client-rs = "0.9.1"
getrandom = "0.2.13"
ssh-key = { version = "0.6.5", features = ["crypto"] }
# we need the signature that ssh-key uses
signature = "2.2.0"
anyhow = "1.0.81"
pam-bindings = "0.1.1"
syslog = "6.1.0"
users = { version = "0.11.0", default-features = false }
hostname = { version = "0.4.1", default-features = false }
