[package]
name = "pam-ssh-agent"
version = "0.9.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nresare/pam-ssh-agent"
authors = ["Noa Resare"]
description = """
A PAM module that authenticates using the ssh-agent.
"""

[lib]
name = "pam_ssh_agent"
crate-type = ["lib", "cdylib"]

[dependencies]
ssh-agent-client-rs = "1.0.0"
getrandom = "0.3.3"
ssh-key = { version = "0.6.7", features = ["crypto"] }
signature = "2.2.0"
anyhow = "1.0.98"
pam-bindings = "0.1.1"
# Keep this on 6.x until https://bugzilla.redhat.com/show_bug.cgi?id=2300127 is resolved
syslog = "6.1.1"
uzers = { version = "0.12.1", default-features = false }
# Keep this on 0.3.x until https://bugzilla.redhat.com/show_bug.cgi?id=2272456 is resolved
hostname = { version = "0.3.1", default-features = false }
