[package]
name = "pam-ssh-agent"
version = "0.9.4"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nresare/pam-ssh-agent"
authors = ["Noa Resare"]
description = """
A PAM module that authenticates using the ssh-agent.
"""

[lib]
name = "pam_ssh_agent"
crate-type = ["lib", "cdylib"]

[dependencies]
ssh-agent-client-rs = "1.1.1"
getrandom = "0.3.3"
ssh-key = { version = "0.6.7", features = ["crypto"] }
signature = "2.2.0"
anyhow = "1.0.98"
pam-bindings = "0.1.1"
# Keep this on 6.x until https://bugzilla.redhat.com/show_bug.cgi?id=2300127 is resolved
syslog = "6.1.1"
uzers = { version = "0.12.1", default-features = false }
# Keep this on 0.3.x until https://bugzilla.redhat.com/show_bug.cgi?id=2272456 is resolved
hostname = { version = "0.3.1", default-features = false }
log = "0.4.27"

# The native-crypto dependencies
openssl = { version = "0.10.73", optional = true }
p256 = { version = "0.13.2", optional = true }
p384 = { version = "0.13.1", optional = true }
p521 = { version = "0.13.3", optional = true }
wait-timeout = "0.2.1"

[dev-dependencies]
base64 = "0.22.1"
ssh-encoding = "0.2.0"
env_logger = "0.11.8"

[features]
native-crypto = ["dep:openssl", "dep:p256", "dep:p384", "dep:p521"]

